--- a/index.html
+++ b/index.html
@@ -6,152 +6,86 @@
   <title>FIMA - Festival International de la Mode Africaine</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet" />
   <style>
-    /* Reset et styles de base */
-    * {
-      box-sizing: border-box;
-    }
     body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background-color: #fff;
-      color: #1a1a1a;
-      line-height: 1.6;
+      margin: 0; font-family: 'Inter', sans-serif; background: #fff; color: #111;
     }
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
-    /* Header sticky */
     header {
-      position: sticky;
-      top: 0;
-      background: #fff;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      position: sticky; top: 0; background: #fff; box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       z-index: 1000;
     }
     .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 1rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      height: 60px;
+      max-width: 1200px; margin: 0 auto; padding: 0 1rem;
+      display: flex; align-items: center; justify-content: space-between; height: 60px;
     }
     h1 {
-      font-family: 'Playfair Display', serif;
-      font-weight: 700;
-      font-size: 1.8rem;
-      margin: 0;
-      color: #111;
+      font-family: 'Playfair Display', serif; font-weight: 700; font-size: 1.8rem; margin: 0; color: #111;
     }
     nav ul {
-      list-style: none;
-      display: flex;
-      gap: 1.5rem;
-      margin: 0;
-      padding: 0;
+      list-style: none; display: flex; gap: 1.5rem; margin: 0; padding: 0;
     }
     nav a {
-      font-weight: 600;
-      font-size: 1rem;
-      padding: 0.5rem 0;
-      color: #555;
-      border-bottom: 3px solid transparent;
-      transition: border-color 0.3s, color 0.3s;
+      font-weight: 600; font-size: 1rem; padding: 0.5rem 0; color: #555;
+      border-bottom: 3px solid transparent; transition: border-color 0.3s, color 0.3s;
     }
-    nav a:hover,
-    nav a.active {
-      color: #000;
-      border-bottom-color: #000;
+    nav a:hover, nav a.active {
+      color: #000; border-bottom-color: #000;
     }
-    /* Hero Section */
-    main.hero {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: center;
-      padding: 4rem 1rem;
-      background: #faf9f6;
-      gap: 2rem;
+    .hero-video {
+      position: relative; height: 70vh; overflow: hidden;
     }
-    .hero-image {
-      flex: 1 1 400px;
-      max-width: 600px;
-      border-radius: 1rem;
-      overflow: hidden;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-    }
-    .hero-image img {
-      width: 100%;
-      height: auto;
-      display: block;
+    .hero-video video {
+      position: absolute; top: 50%; left: 50%;
+      min-width: 100%; min-height: 100%;
+      width: auto; height: auto; transform: translate(-50%, -50%);
+      z-index: -1; filter: brightness(0.6);
     }
     .hero-content {
-      flex: 1 1 300px;
-      max-width: 500px;
+      position: relative; z-index: 1;
+      max-width: 700px; margin: 0 auto; padding: 6rem 1rem; color: #fff;
+      text-align: center;
     }
     .hero-content h2 {
-      font-family: 'Playfair Display', serif;
-      font-weight: 700;
-      font-size: 2.8rem;
-      margin-bottom: 1rem;
-      color: #111;
+      font-family: 'Playfair Display', serif; font-weight: 700; font-size: 3rem; margin-bottom: 1rem;
     }
     .hero-content p {
-      font-size: 1.15rem;
-      margin-bottom: 2rem;
-      color: #333;
+      font-size: 1.3rem; margin-bottom: 2rem;
     }
     .button {
-      display: inline-block;
-      background-color: #000;
-      color: #fff;
-      padding: 0.75rem 2rem;
-      border-radius: 50px;
-      font-weight: 700;
-      font-size: 1rem;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      background-color: #fff; color: #111; padding: 1rem 2.5rem; border-radius: 50px;
+      font-weight: 700; font-size: 1rem; text-decoration: none; box-shadow: 0 5px 15px rgba(0,0,0,0.2);
       transition: background-color 0.3s ease;
     }
     .button:hover {
-      background-color: #444;
+      background-color: #eee;
     }
-    /* Intro Section */
-    section.intro {
-      max-width: 900px;
-      margin: 4rem auto;
-      padding: 0 1rem;
+    section.videos-fima {
+      max-width: 1200px; margin: 4rem auto; padding: 0 1rem;
+    }
+    section.videos-fima h3 {
+      font-family: 'Playfair Display', serif; font-weight: 600; font-size: 2rem; margin-bottom: 2rem;
       text-align: center;
-    }
-    section.intro h3 {
-      font-family: 'Playfair Display', serif;
-      font-weight: 600;
-      font-size: 2rem;
-      margin-bottom: 1rem;
       color: #111;
     }
-    section.intro p {
-      font-size: 1.125rem;
-      color: #444;
-      line-height: 1.5;
+    .video-container {
+      display: flex; gap: 2rem; flex-wrap: wrap; justify-content: center;
     }
-    /* Footer */
+    .video-container iframe {
+      flex: 1 1 350px;
+      height: 200px;
+      border: none;
+      border-radius: 1rem;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    }
     footer {
-      background-color: #111;
-      color: #eee;
-      text-align: center;
-      padding: 1rem 1rem;
-      font-size: 0.9rem;
+      background-color: #111; color: #eee; text-align: center; padding: 1rem 1rem; font-size: 0.9rem;
       margin-top: 4rem;
     }
-    /* Responsive */
     @media (max-width: 768px) {
-      main.hero {
-        flex-direction: column;
-      }
       .hero-content h2 {
         font-size: 2rem;
+      }
+      .video-container iframe {
+        height: 180px;
       }
     }
   </style>
@@ -175,24 +109,13 @@
     </div>
   </header>
 
-  <main class="hero" role="main" aria-label="Présentation du Festival International de la Mode Africaine">
-    <div class="hero-image">
-      <img src="images/imageFima1.png" alt="Mode africaine - Festival International de la Mode Africaine" />
-    </div>
-    <div class="hero-content">
-      <h2>Festival International de la Mode Africaine</h2>
-      <p>Un rendez-vous incontournable de la créativité africaine fondé par le célèbre styliste Alphadi. Découvrez les plus grands créateurs, les artistes émergents et l’esprit du luxe afro-chic.</p>
-      <a href="billetterie.html" class="button" role="button">Réservez vos places</a>
-    </div>
-  </main>
-
-  <section class="intro" aria-label="Présentation du FIMA">
-    <h3>Bienvenue au FIMA</h3>
-    <p>Le FIMA met en lumière le meilleur de la mode africaine, en réunissant créateurs, stylistes, artistes, musiciens, photographes et passionnés venus du monde entier. Plus qu’un défilé, c’est un mouvement culturel et une vitrine pour la paix par la créativité.</p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 FIMA - Tous droits réservés. Conçu avec passion pour l’Afrique et ses talents.</p>
-  </footer>
-</body>
-</html>
+  <main role=\"main\">
+    <section class=\"hero-video\" aria-label=\"Vidéo du Festival International de la Mode Africaine en background\">
+      <video autoplay muted loop playsinline>
+        <source src=\"videos/fima-promo.mp4\" type=\"video/mp4\" />
+        <!-- Fallback -->
+        Votre navigateur ne supporte pas la vidéo HTML5.
+      </video>
+      <div class=\"hero-content\">
+        <h2>Festival International de la Mode Africaine</h2>
+        <p>Un rendez-vous incontournable de la créativité afric
