--- a/concours.html
+++ b/concours.html
@@ -1,10 +1,66 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Concours - FIMA</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      margin: 0; font-family: 'Inter', sans-serif; background: #fff; color: #111;
+    }
+    header {
+      position: sticky; top: 0; background: #fff; box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      z-index: 1000;
+    }
+    .container {
+      max-width: 1200px; margin: 0 auto; padding: 0 1rem;
+      display: flex; align-items: center; justify-content: space-between; height: 60px;
+    }
+    h1 {
+      font-family: 'Playfair Display', serif; font-weight: 700; font-size: 1.8rem; margin: 0; color: #111;
+    }
+    nav ul {
+      list-style: none; display: flex; gap: 1.5rem; margin: 0; padding: 0;
+    }
+    nav a {
+      font-weight: 600; font-size: 1rem; padding: 0.5rem 0; color: #555;
+      border-bottom: 3px solid transparent; transition: border-color 0.3s, color 0.3s;
+    }
+    nav a:hover, nav a.active {
+      color: #000; border-bottom-color: #000;
+    }
+    main {
+      max-width: 900px; margin: 4rem auto; padding: 0 1rem;
+      line-height: 1.6;
+    }
+    h2 {
+      font-family: 'Playfair Display', serif; font-weight: 700; font-size: 2.5rem; margin-bottom: 2rem; text-align: center;
+    }
+    section {
+      margin-bottom: 3rem;
+    }
+    .step {
+      background: #f9f9f9;
+      border-left: 5px solid #222;
+      padding: 1rem 1.5rem;
+      margin-bottom: 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+    .step h3 {
+      margin-top: 0;
+      font-family: 'Playfair Display', serif;
+      color: #222;
+    }
+    ul.participants {
+      list-style-type: disc;
+      padding-left: 1.5rem;
+    }
+    ul.participants li {
+      margin-bottom: 0.5rem;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -19,34 +75,20 @@
           <li><a href="billetterie.html">Billetterie</a></li>
           <li><a href="apropos.html">À propos</a></li>
           <li><a href="alphadi.html">Alphadi</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
-
-  <main class="section">
-    <h2>Concours de jeunes créateurs</h2>
-    <p>Le FIMA offre une plateforme exceptionnelle aux jeunes talents africains à travers ses concours de mode. Chaque édition révèle des stylistes émergents porteurs d’une vision nouvelle.</p>
-
-    <h3>Déroulé du concours</h3>
-    <ul>
-      <li>📌 **Phase 1** – Sélection des candidats sur dossier (portfolio, lettre de motivation, démarche artistique)</li>
-      <li>📌 **Phase 2** – Pré-sélection par un jury d’experts internationaux de la mode</li>
-      <li>📌 **Phase 3** – Présentation des collections en défilé public au FIMA</li>
-      <li>🏆 **Finale** – Remise de prix aux lauréats dans différentes catégories (jeune espoir, innovation, textile traditionnel)</li>
-    </ul>
-
-    <h3>Participants attendus (édition 2025)</h3>
-    <ul>
-      <li><strong>Awa Diop</strong> (Sénégal) – Inspirée par les textiles sérères</li>
-      <li><strong>William Tamba</strong> (Côte d’Ivoire) – Couture urbaine afro-futuriste</li>
-      <li><strong>Sophia Barka</strong> (Niger) – Design minimaliste, teintures végétales</li>
-      <li><strong>Khadija Lahlou</strong> (Maroc) – Caftans revisités et motifs amazighs</li>
-    </ul>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 FIMA - Tous droits réservés.</p>
-  </footer>
-</body>
-</html>
+  <main>
+    <h2>Concours de créateurs de mode</h2>
+    
+    <section aria-label="Déroulement du concours">
+      <h3>Déroulement du concours</h3>
+      <div class="step">
+        <h4>1. Appel à candidatures</h4>
+        <p>Les créateurs de mode africains soumettent leur dossier via le formulaire en ligne sur le site officiel du FIMA. La sélection se base sur la créativité, la qualité et l’originalité des propositions.</p>
+      </div>
+      <div class="step">
+        <h4>2. Sélection des finalistes</h4>
+        <p>Un jury composé de professionnels de la mode et d’experts culturels sélectionne les finalistes qui participeront aux défilés pendant le festival.</p
